Fixed html overflow-y

--- a/css/themes/basic.css
+++ b/css/themes/basic.css
@@ -2,6 +2,7 @@
 
 html {
 	height: 100%;
+	overflow-y: hidden;
 }
 
 body {
